[gd_scene load_steps=16 format=2]

[ext_resource path="res://DungeonTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://FallTileSet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Medieval Warrior Pack 2/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level1.gd" type="Script" id=7]
[ext_resource path="res://FadeINOUT.tscn" type="PackedScene" id=8]
[ext_resource path="res://Misc tiles.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Bat.tscn" type="PackedScene" id=10]
[ext_resource path="res://Restart.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemies/Rat.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemies/Skeleton.tscn" type="PackedScene" id=13]
[ext_resource path="res://music/Panic Attack.ogg" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 119.106, 87.1587 )

[node name="Level2" type="Node2D"]
script = ExtResource( 7 )
playerhealth = 5
level = 1

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 579.264, 139.912 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="bottomright" parent="Camera2D/limits" index="1"]
position = Vector2( 10000, 8000 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 579.264, 139.912 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Skeleton" parent="." instance=ExtResource( 13 )]
position = Vector2( 724.653, 66.0109 )

[node name="Dungeon" parent="." instance=ExtResource( 1 )]

[node name="Fall" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 196616, 0, 65543, 196617, 0, 65543, 196618, 0, 65543, 196619, 0, 65543, 196620, 0, 65543, 327695, 0, 65540, 327696, 0, 65540, 327697, 0, 65540, 327698, 0, 65540, 327699, 0, 65540, 327700, 0, 65540, 458784, 0, 65540, 458785, 0, 65540, 458786, 0, 65540, 458787, 0, 65540 )

[node name="Misc tiles" parent="." instance=ExtResource( 9 )]

[node name="Rat" parent="." instance=ExtResource( 12 )]
position = Vector2( 1088.8, 202.537 )

[node name="Bat" parent="." instance=ExtResource( 10 )]
position = Vector2( 1100.56, 140.638 )

[node name="FadeINOUT" parent="." instance=ExtResource( 8 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Restart" parent="." instance=ExtResource( 11 )]

[node name="youdied" parent="Restart" index="0"]
visible = false

[node name="HBoxContainer" parent="Restart" index="1"]
visible = false

[node name="restart" parent="Restart" index="2"]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 343.112, 49.4441 )
shape = SubResource( 1 )
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="pressed" from="Restart/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Restart/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Camera2D"]

[editable path="FadeINOUT"]

[editable path="Restart"]
